--- a/thymeleaf-02/src/main/resources/templates/teacher-list.html
+++ b/thymeleaf-02/src/main/resources/templates/teacher-list.html
@@ -29,8 +29,10 @@
             <th>ID</th>
             <th>Name</th>
             <th>Phone</th>
-            <th>Subject</th>
             <th>Day of birth</th>
+            <th>Gender</th>
+            <th>Major</th>
+            <th>Level</th>
         </tr>
         </thead>
         <tr th:each="teacher : ${teacherList}">
