--- a/thymeleaf-02/src/main/resources/templates/creat-teacher.html
+++ b/thymeleaf-02/src/main/resources/templates/creat-teacher.html
@@ -35,12 +35,34 @@
                             <input type="text" th:field="*{phone}" class="form-control" id="phone"/>
                         </div>
                         <div class="form-group">
-                            <label for="subject">subject</label>
-                            <input type="text" th:field="*{subject}" class="form-control" id="subject"/>
-                        </div>
-                        <div class="form-group">
                             <label for="dob">phone</label>
                             <input type="date" th:field="*{dob}" class="form-control" id="dob"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="gender">Gender:</label>
+                            <select class="form-control" th:field="*{gender}" id="gender">
+                                <option value="">Select gender</option>
+                                <option value="MALE">Male</option>
+                                <option value="FEMALE">Female</option>
+                                <option value="OTHER">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="major">Major:</label>
+                            <select class="form-control" th:field="*{major}" id="major">
+                                <option value="">Select major</option>
+                                <option value="NATURAL_SCIENCE">Natural Science</option>
+                                <option value="SOCIAL_SCIENCE">Social Science</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="level">Level:</label>
+                            <select class="form-control" th:field="*{level}" id="level">
+                                <option value="">Select level</option>
+                                <option value="PROFESSOR">Professor</option>
+                                <option value="DOCTOR">Doctor</option>
+                                <option value="MASTER">Master</option>
+                            </select>
                         </div>
 
                         <button type="submit" class="btn btn-primary">Save</button>
