--- a/thymeleaf-02/src/main/resources/templates/teacher-list.html
+++ b/thymeleaf-02/src/main/resources/templates/teacher-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Danh sách giáo viên</title>
@@ -39,8 +40,9 @@
             <td th:text="${teacher.id}"></td>
             <td th:text="${teacher.name}"></td>
             <td th:text="${teacher.phone}"></td>
-            <td th:text="${teacher.subject}"></td>
             <td th:text="${teacher.dob}"></td>
+            <td th:text="${teacher.major}"></td>
+            <td th:text="${teacher.level}"></td>
         </tr>
 
     </table>
