--- a/thymeleaf-02/src/main/resources/templates/teacher-list.html
+++ b/thymeleaf-02/src/main/resources/templates/teacher-list.html
@@ -41,6 +41,7 @@
             <td th:text="${teacher.name}"></td>
             <td th:text="${teacher.phone}"></td>
             <td th:text="${teacher.dob}"></td>
+            <td th:text="${teacher.gender}"></td>
             <td th:text="${teacher.major}"></td>
             <td th:text="${teacher.level}"></td>
         </tr>
