--- a/thymeleaf-02/src/main/resources/templates/teacher-list.html
+++ b/thymeleaf-02/src/main/resources/templates/teacher-list.html
@@ -23,6 +23,19 @@
             <a class="btn btn-primary" href="/teachers/creat-form">Tạo mới</a>
         </div>
     </div>
+
+    <div class="row py-2">
+        <div class="col">
+            <a class="btn btn-primary" href="/teachers/edit-form">Chỉnh sửa</a>
+        </div>
+    </div>
+
+    <div class="row py-2">
+        <div class="col">
+            <a class="btn btn-primary" href="/teachers/delete-form">Xóa</a>
+        </div>
+    </div>
+
     <h2>Danh sách giáo viên</h2>
     <table class="table table-bordered">
         <thead>
