--- a/thymeleaf-02/src/main/resources/templates/creat-teacher.html
+++ b/thymeleaf-02/src/main/resources/templates/creat-teacher.html
@@ -31,11 +31,11 @@
                             <input type="text" th:field="*{name}" class="form-control" id="name"/>
                         </div>
                         <div class="form-group">
-                            <label for="phone">phone</label>
+                            <label for="phone">Phone</label>
                             <input type="text" th:field="*{phone}" class="form-control" id="phone"/>
                         </div>
                         <div class="form-group">
-                            <label for="dob">phone</label>
+                            <label for="dob">Day of birth</label>
                             <input type="date" th:field="*{dob}" class="form-control" id="dob"/>
                         </div>
                         <div class="form-group">
@@ -66,7 +66,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary">Save</button>
-                        <a role="button" class="btn btn-secondary" th:href="@{/students}">Back</a>
+                        <a role="button" class="btn btn-secondary" th:href="@{/teachers}">Back</a>
                     </form>
                 </div>
             </div>
