--- a/thymeleaf-02/src/main/resources/templates/edit-teacher.html
+++ b/thymeleaf-02/src/main/resources/templates/edit-teacher.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Cập nhật thông tin giáo viên</title>
+    <title>Sửa thông tin giáo viên</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+<div class="container-fluid">
+    <div class="row px-5">
+        <div class="col">
+            <div class="row justify-content-center">
+                <h1>Create New Teacher</h1>
+            </div>
+            <div class="row justify-content-center mb-4">
+                <div class="col">
+                    <form action="#" th:action="@{/teachers/update}" th:object="${editedTeacher}" method="post">
+                        <div class="form-group">
+                            <label for="id">ID</label>
+                            <input type="text" th:field="*{id}" class="form-control" id="id"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" th:field="*{name}" class="form-control" id="name"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone</label>
+                            <input type="text" th:field="*{phone}" class="form-control" id="phone"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="dob">Day of birth</label>
+                            <input type="date" th:field="*{dob}" class="form-control" id="dob"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="gender">Gender:</label>
+                            <select class="form-control" th:field="*{gender}" id="gender">
+                                <option value="">Select gender</option>
+                                <option value="MALE">Male</option>
+                                <option value="FEMALE">Female</option>
+                                <option value="OTHER">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="major">Major:</label>
+                            <select class="form-control" th:field="*{major}" id="major">
+                                <option value="">Select major</option>
+                                <option value="NATURAL_SCIENCE">Natural Science</option>
+                                <option value="SOCIAL_SCIENCE">Social Science</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="level">Level:</label>
+                            <select class="form-control" th:field="*{level}" id="level">
+                                <option value="">Select level</option>
+                                <option value="PROFESSOR">Professor</option>
+                                <option value="DOCTOR">Doctor</option>
+                                <option value="MASTER">Master</option>
+                            </select>
+                        </div>
 
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <a role="button" class="btn btn-secondary" th:href="@{/teachers}">Back</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
