--- a/user-management/src/main/resources/templates/delete-user.html
+++ b/user-management/src/main/resources/templates/delete-user.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Quản lý sinh viên</title>
+    <title>Title</title>
 </head>
 <body>
-<a th:href="teachers">Danh sách giáo viên</a>
+
 </body>
 </html>
