--- a/user-management/src/main/resources/templates/edit-user.html
+++ b/user-management/src/main/resources/templates/edit-user.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Xóa giáo viên</title>
+  <title>Sửa thông tin user</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
@@ -21,18 +21,33 @@
   <div class="row px-5">
     <div class="col">
       <div class="row justify-content-center">
-        <h1>Xóa giáo viên</h1>
+        <h1>Sửa thông tin</h1>
       </div>
       <div class="row justify-content-center mb-4">
         <div class="col">
-          <form action="#" th:action="@{/teachers/delete}" th:object="${deletedTeacher}" method="post">
+          <form action="#" th:action="@{/users/edit}" th:object="${userToiMuonCapNhat}" method="post">
+
+              <input type="text" th:field="*{id}" th:hidden="true"/>
+
             <div class="form-group">
-              <label for="id">ID</label>
-              <input type="text" th:field="*{id}" class="form-control" id="id"/>
+              <label for="userName">UserName</label>
+              <input type="text" th:field="*{userName}" class="form-control" id="userName"/>
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="text" th:field="*{password}" class="form-control" id="password"/>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="text" th:field="*{email}" class="form-control" id="email"/>
+            </div>
+            <div class="form-group">
+              <label for="phone">Phone</label>
+              <input type="text" th:field="*{phone}" class="form-control" id="phone"/>
             </div>
 
             <button type="submit" class="btn btn-primary">Save</button>
-            <a role="button" class="btn btn-secondary" th:href="@{/teachers}">Back</a>
+            <a role="button" class="btn btn-secondary" th:href="@{/users}">Back</a>
           </form>
         </div>
       </div>
