--- a/thymeleaf-02/src/main/resources/templates/edit-teacher.html
+++ b/thymeleaf-02/src/main/resources/templates/edit-teacher.html
@@ -21,7 +21,7 @@
     <div class="row px-5">
         <div class="col">
             <div class="row justify-content-center">
-                <h1>Create New Teacher</h1>
+                <h1>Sửa thông tin</h1>
             </div>
             <div class="row justify-content-center mb-4">
                 <div class="col">
