--- a/user-management/src/main/resources/templates/user-list.html
+++ b/user-management/src/main/resources/templates/user-list.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Danh sách giáo viên</title>
+    <title>Danh sách người dùng</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
@@ -22,40 +22,33 @@
 <div class="container">
     <div class="row py-5">
         <div class="col pr-2">
-            <a class="btn btn-primary" href="/teachers/creat-form">Tạo mới</a>
+            <a class="btn btn-primary" href="/users/creat-form">Tạo mới</a>
         </div>
-        <div class="col pr-5">
-            <a class="btn btn-primary" href="/teachers/delete-form">Xóa</a>
-        </div>
-        <div class="col pr-5">
-            <a class="btn btn-primary" href="/teachers/edit-form">Chỉnh sửa</a>
+        <div class="col pr-2">
+            <a class="btn btn-primary" href="/users/edit-form">Chỉnh sửa</a>
         </div>
     </div>
 
 
-    <h2>Danh sách giáo viên</h2>
+    <h2>Danh sách User</h2>
     <table class="table table-bordered">
         <thead>
         <tr>
             <th class="text-center">ID</th>
-            <th class="text-center">Name</th>
+            <th class="text-center">Username</th>
+            <th class="text-center">Password</th>
+            <th class="text-center">Email</th>
             <th class="text-center">Phone</th>
-            <th class="text-center">Day of birth</th>
-            <th class="text-center">Gender</th>
-            <th class="text-center">Major</th>
-            <th class="text-center">Level</th>
-            <th class="text-center">Actions</th>
+            <th class="text-center">Action</th>
 
         </tr>
         </thead>
-        <tr th:each="teacher : ${teacherList}">
-            <td th:text="${teacher.id}"></td>
-            <td th:text="${teacher.name}"></td>
-            <td th:text="${teacher.phone}"></td>
-            <td th:text="${teacher.dob}"></td>
-            <td th:text="${teacher.gender}"></td>
-            <td th:text="${teacher.major}"></td>
-            <td th:text="${teacher.level}"></td>
+        <tr th:each="user : ${userList}">
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.userName}"></td>
+            <td th:text="${user.password}"></td>
+            <td th:text="${user.email}"></td>
+            <td th:text="${user.phone}"></td>
             <td class="d-flex justify-content-center">
                 <a role="button" class="mr-3">
                     <i class="fas fa-pencil-alt"></i>
