--- a/library-management/src/main/resources/templates/book-list.html
+++ b/library-management/src/main/resources/templates/book-list.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Danh sách book</title>
+  <title>Danh sách bookModel</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
@@ -28,7 +28,7 @@
   </div>
 
 
-  <h2>Danh sách book</h2>
+  <h2>Danh sách bookModel</h2>
   <table class="table table-bordered">
     <thead>
     <tr>
@@ -58,6 +58,13 @@
     </tr>
 
   </table>
+
+  <a href="readers">
+    Quản lý Reader
+  </a>
+  <a href="borrows">
+    Quản lý Borrow
+  </a>
 </div>
 </body>
 </html>
