--- a/Bootstrap02/css/home.css
+++ b/Bootstrap02/css/home.css
@@ -51,6 +51,10 @@
      padding-bottom: 100px;
   }
 
+.block-3{
+  z-index: 3;
+}
+
   .community{
     background-color: #FFEEDD;
     border-radius: 1.5625rem;
@@ -70,6 +74,18 @@
     border: 1px solid #1877F2;
     border-radius: 50%;
   }
+
+  
+
+  .frequent-question-item a{
+    justify-content: space-between;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    text-decoration: none;
+    
+  }
+
+
 
   .support-ticket{
     position: relative;
