--- a/library-management/src/main/resources/templates/creat-book.html
+++ b/library-management/src/main/resources/templates/creat-book.html
@@ -29,10 +29,12 @@
             <div class="form-group">
               <label for="title">Title</label>
               <input type="text" th:field="*{title}" class="form-control" id="title"/>
+              <div class="alert alert-warning" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
             </div>
             <div class="form-group">
               <label for="author">Author</label>
               <input type="text" th:field="*{author}" class="form-control" id="author"/>
+              <div class="alert alert-warning" th:if="${#fields.hasErrors('author')}" th:errors="*{author}"></div>
             </div>
 
             <div class="form-group mt-2">
@@ -45,10 +47,11 @@
             <div class="form-group">
               <label for="yearOfPublish">Year Of Publish</label>
               <input type="text" th:field="*{yearOfPublish}" class="form-control" id="yearOfPublish"/>
+              <div class="alert alert-warning" th:if="${#fields.hasErrors('yearOfPublish')}" th:errors="*{yearOfPublish}"></div>
             </div>
 
             <button type="submit" class="btn btn-primary">Save</button>
-            <a role="button" class="btn btn-secondary" th:href="@{/books}">Back</a>
+            <a role="button" class="btn btn-secondary" th:href="@{/bookModels}">Back</a>
           </form>
         </div>
       </div>
