--- a/library-management/src/main/resources/templates/creat-reader.html
+++ b/library-management/src/main/resources/templates/creat-reader.html
@@ -29,14 +29,17 @@
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" th:field="*{name}" class="form-control" id="name"/>
+              <div class="alert alert-warning" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
             </div>
             <div class="form-group">
               <label for="address">Address</label>
               <input type="text" th:field="*{address}" class="form-control" id="address"/>
+              <div class="alert alert-warning" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
             </div>
             <div class="form-group">
-              <label for="phone">Author</label>
-              <input type="text" th:field="*{phone}" class="form-control" id="phone"/>
+              <label for="phone">Phone</label>
+              <input type="text" th:field="*{phone}" class="form-control" id="phone"/>Phone
+              <div class="alert alert-warning" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></div>
             </div>
 
             <div class="form-group mt-2">
