--- a/bus-management/src/main/resources/templates/assignment-list.html
+++ b/bus-management/src/main/resources/templates/assignment-list.html
@@ -36,6 +36,7 @@
             <th class="text-center">Tên lái xe</th>
             <th class="text-center">Khoảng cách tuyến</th>
             <th class="text-center">Số lượt chạy tuyến</th>
+            <th class="text-center">Action</th>
 
         </tr>
         </thead>
