--- a/bus-management/src/main/resources/templates/driver-list.html
+++ b/bus-management/src/main/resources/templates/driver-list.html
@@ -21,10 +21,17 @@
 <body>
 <div class="container">
     <div class="row py-5">
-        <div class="col pr-2">
+        <div class="col-4 pr-2">
             <a class="btn btn-primary" href="/drivers/creat-form">Tạo mới</a>
         </div>
 
+        <div class="col-4 pr-2">
+            <a class="btn btn-primary" href="routes">Quản lý tuyến</a>
+        </div>
+
+        <div class="col-4 pr-2">
+            <a class="btn btn-primary" href="assignments">Quản lý lịch trình</a>
+        </div>
     </div>
 
 
@@ -56,63 +63,59 @@
 <!--                </a>-->
 <!--            </td>-->
 
-            <td class="d-flex justify-content-center">
-                <a role="button" class="mr-3" th:href="'drivers/' + ${driver.id} + '/edit'">
-                    <i class="fas fa-pencil-alt"></i>
-                </a>
-                <a role="button" class="text-danger" th:href="'drivers/' + ${driver.id} + '/delete'" onclick="return confirmDelete();">
-                    <i class="fas fa-trash"></i>
-                </a>
-            </td>
-
-            <script>
-                function confirmDelete() {
-                    var result = confirm("Bạn có chắc chắn xóa?");
-                    return result;
-                }
-            </script>
-
-
-            <!--            <td class="d-flex justify-content-center">-->
+<!--            <td class="d-flex justify-content-center">-->
 <!--                <a role="button" class="mr-3" th:href="'drivers/' + ${driver.id} + '/edit'">-->
 <!--                    <i class="fas fa-pencil-alt"></i>-->
 <!--                </a>-->
-<!--                <a role="button" class="text-danger" data-toggle="modal" data-target="#deleteModal">-->
+<!--                <a role="button" class="text-danger" th:href="'drivers/' + ${driver.id} + '/delete'" onclick="return confirmDelete();">-->
 <!--                    <i class="fas fa-trash"></i>-->
 <!--                </a>-->
 <!--            </td>-->
 
-<!--            &lt;!&ndash; Modal &ndash;&gt;-->
-<!--            <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">-->
-<!--                <div class="modal-dialog" role="document">-->
-<!--                    <div class="modal-content">-->
-<!--                        <div class="modal-header">-->
-<!--                            <h5 class="modal-title" id="deleteModalLabel">Xóa</h5>-->
-<!--                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--                                <span aria-hidden="true">&times;</span>-->
-<!--                            </button>-->
-<!--                        </div>-->
-<!--                        <div class="modal-body">-->
-<!--                            <p>Bạn có chắc chắn muốn xóa?</p>-->
-<!--                        </div>-->
-<!--                        <div class="modal-footer">-->
-<!--                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>-->
-<!--                            <a role="button" class="btn btn-danger" th:href="'drivers/' + ${driver.id} + '/delete'">Xóa</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
+<!--            <script>-->
+<!--                function confirmDelete() {-->
+<!--                    var result = confirm("Bạn có chắc chắn xóa?");-->
+<!--                    return result;-->
+<!--                }-->
+<!--            </script>-->
+
+
+            <td class="d-flex justify-content-center">
+                <a role="button" class="mr-3" th:href="'drivers/' + ${driver.id} + '/edit'">
+                    <i class="fas fa-pencil-alt"></i>
+                </a>
+                <a role="button" class="text-danger" data-toggle="modal" data-target="#deleteModal">
+                    <i class="fas fa-trash"></i>
+                </a>
+            </td>
+
+            <!-- Modal -->
+            <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalLabel">Xóa</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Bạn có chắc chắn muốn xóa?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+                            <a role="button" class="btn btn-danger" th:href="'drivers/' + ${driver.id} + '/delete'">Xóa</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </tr>
 
     </table>
 
-    <a href="routes">
-        Quản lý Route
-    </a>
-    <a href="assignments">
-        Quản lý Sắp xếp tuyến
-    </a>
+
+
 
 </div>
 </body>
