--- a/bus-management/src/main/resources/templates/assignment-list.html
+++ b/bus-management/src/main/resources/templates/assignment-list.html
@@ -51,24 +51,39 @@
             <td th:text="${assignment.khoangCachTuyen}"></td>
             <td th:text="${assignment.soLuotChay}"></td>
 
-            <td class="d-flex justify-content-center" >
-                <a role="button" class="mr-3" th:href="'assignments/'+ ${assignment.id} + '/edit' ">
+            <td class="d-flex justify-content-center">
+                <a role="button" class="mr-3" th:href="'assignments/' + ${assignment.id} + '/edit'">
                     <i class="fas fa-pencil-alt"></i>
                 </a>
-                <a role="button" class="text-danger" th:href="'assignments/'+ ${assignment.id} + '/delete' ">
+                <a role="button" class="text-danger" data-toggle="modal" data-target="#deleteModal">
                     <i class="fas fa-trash"></i>
                 </a>
             </td>
+
+            <!-- Modal -->
+            <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalLabel">Xóa</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Bạn có chắc chắn muốn xóa?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+                            <a role="button" class="btn btn-danger" th:href="'assignments/' + ${assignment.id} + '/delete'">Xóa</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </tr>
 
     </table>
 
-    <a href="/routes">
-        Quản lý Route
-    </a>
-    <a href="/drivers">
-        Quản lý Driver
-    </a>
 
 </div>
 </body>
