--- a/spring-tutorial-practice-master/spring-tutorial-practice-master/bus_management_ajax/src/main/resources/templates/list/driver-list.html
+++ b/spring-tutorial-practice-master/spring-tutorial-practice-master/bus_management_ajax/src/main/resources/templates/list/driver-list.html
@@ -93,17 +93,18 @@
             const studentId= $(event.currentTarget).attr("student-id")
 
             //Sử dụng Ajak để call API vừa viết
-            $.ajax({
+             $.ajax({
                 url: '/api/drivers/' + studentId,
                 type: 'GET',
                 contentType: "application/json; charset=utf-8",
-                success.function(data){
-                console.log(data);
-            }
-            error: function (data) {
-                console.log(data);
-
-            }
+                success: function (data) {
+                    console.log(data);
+                    currentStudent = data;
+                },
+                error: function (data) {
+                    console.log(data);
+                    toastr.warning(data.responseJSON.message);
+                }
             });
         });
     });
