--- a/pet_shop_management/src/main/resources/templates/fragments/product-create-modal.html
+++ b/pet_shop_management/src/main/resources/templates/fragments/product-create-modal.html
@@ -12,19 +12,19 @@
             </div>
 
             <!-- Modal body -->
-            <form action="#" th:action="@{/products}" th:object="${sanPhamMuonTaoMoi}" method="post">
+            <form action="#" th:action="@{/admin/products}" th:object="${sanPhamMuonTaoMoi}" method="post">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" th:field="*{name}" class="form-control" id="name"/>
                     </div>
                     <div class="form-group">
-                        <label for="address">Address</label>
+                        <label for="address">Price</label>
                         <input type="text" th:field="*{price}" class="form-control" id="address"/>
                     </div>
 
                     <div class="form-group">
-                        <label for="description">Phone</label>
+                        <label for="description">Description</label>
                         <input type="text" th:field="*{description}" class="form-control" id="description"/>
                     </div>
 
