--- a/pet_shop_management/src/main/resources/templates/fragments/nav.html
+++ b/pet_shop_management/src/main/resources/templates/fragments/nav.html
@@ -8,7 +8,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/admin/products}">Danh sách sản phẩm</a>
+            <a class="nav-link" th:href="@{/admin}">Danh sách sản phẩm</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" th:href="@{/admin/appointments}">Danh sách lịch khám</a>
