--- a/pet_shop_management/src/main/resources/templates/fragments/product-update-modal.html
+++ b/pet_shop_management/src/main/resources/templates/fragments/product-update-modal.html
@@ -29,12 +29,6 @@
                         <input type="text" class="form-control" id="description" name="description"
                                placeholder="Enter description"/>
                     </div>
-
-                    <div class="form-group">
-                        <label for="status">Status</label>
-                        <select name="status" id="status" class="form-control">
-                        </select>
-                    </div>
                     
                 </div>
             </form>
@@ -43,6 +37,51 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="save-product">Save</button>
                 <button type="button" class="btn btn-danger close-modal" data-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<body>
+<div th:fragment="product-update-modal" class="modal fade" id="product-update-modal">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Update a product</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <form action="#" id="product-update-modal-form">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="name"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Price</label>
+                        <input type="text" class="form-control" id="price" name="price"/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="description">Phone</label>
+                        <input type="text" class="form-control" id="description" name="description"/>
+                    </div>
+
+                </div>
+            </form>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="submit-update-product">Save</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
 
         </div>
