--- a/techmaster_course_management/src/main/resources/templates/course-onlab-list.html
+++ b/techmaster_course_management/src/main/resources/templates/course-onlab-list.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -28,8 +28,8 @@
                     </a>
                 </div>
                 <div class="menu">
-                    <a class="text-white text-uppercase ms-5" href="./course-onlab-list.html">Phòng lab</a>
-                    <a class="text-white text-uppercase ms-3" href="./course-online-list.html">Trực tuyến</a>
+                    <a class="text-white text-uppercase ms-5" href="/khoa-hoc/onlab">Phòng lab</a>
+                    <a class="text-white text-uppercase ms-3" href="/khoa-hoc/online">Trực tuyến</a>
                 </div>
             </div>
         </div>
